--- a/src/pages/project/style.css
+++ b/src/pages/project/style.css
@@ -2,12 +2,13 @@
     margin:50px 50px;
 }
 
-.projectContainer .image img{
+.projectContainer .projectImage img{
     width: 100%;
     border-radius: 7px;
     object-fit: cover;
     height: 623px;
 }
+
 
 .titleContainer{
     display: flex;
