--- a/src/App.css
+++ b/src/App.css
@@ -41,79 +41,96 @@
   color: #888;
 } */
 
-body {
-margin: 0;
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
-.app{
-  width:100vw;
-  border:2px solid rgb(255, 255, 255);
+body,
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden !important;
+  font-family: "Roboto", sans-serif;
+}
+
+section {
+  padding: 50px 10px;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+.app {
+  width: 100vw;
+  border: 2px solid rgb(255, 255, 255);
   background: #f1eeee;
 }
 
 .header {
-  width:100vw;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #123;
   color: white;
-  height:80px;
+  height: 80px;
   position: fixed;
   top: 0;
 }
 
-
-
-.header-tabs{
-  width:60%;
+.header-tabs {
+  width: 60%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.header-tabs p{
-font-size: 24px;
+.header-tabs p {
+  font-size: 24px;
 }
 
-.footer{
-  width:100%;
+.footer {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-  height:80px;
+  height: 80px;
   border-top: 2px solid #000;
 }
 
-.footer-block{
-  width:40%;
+.footer-block {
+  width: 40%;
   display: flex;
-  gap:20px;
+  gap: 20px;
   align-items: center;
-
 }
 
-.footer-block p{
-font-size: 14px;
-color: #6B7280;
+.footer-block p {
+  font-size: 14px;
+  color: #6b7280;
 }
 
-.footer-link{
-  width:50%;
+.footer-link {
+  width: 50%;
   display: flex;
   justify-content: end;
-  gap:8px;
+  gap: 8px;
 }
 
-.content{
+.content {
   margin-top: 80px;
   width: 100%;
 }
 
-.joinBlock{
-  border-top:2px solid rgb(10, 10, 11);
+.joinBlock {
+  border-top: 2px solid rgb(10, 10, 11);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -122,116 +139,101 @@ color: #6B7280;
   padding: 40px 0px;
 }
 
-.joinBlock h1{
- font-size: 30px;
- margin: 0;
- line-height: 45px;
- font-weight: 400;
-} 
+.joinBlock h1 {
+  font-size: 30px;
+  margin: 0;
+  line-height: 45px;
+  font-weight: 400;
+}
 
-.joinBlock p{
+.joinBlock p {
   font-size: 20px;
   margin: 0;
   line-height: 30px;
   width: 427px;
-} 
+}
 
-.joinBlock p:last-child{
+.joinBlock p:last-child {
   font-size: 15px;
   margin: 0;
   line-height: 22px;
-  color: #6B7280;
-
-} 
+  color: #6b7280;
+}
 
 .formBlock {
-width:464px;
-margin: 10px 0px 20px 0px;
-display: flex;
-justify-content: center;
-gap:5px;
+  width: 464px;
+  margin: 10px 0px 20px 0px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
 }
 
-.formBlock input{
-  width:60%;
+.formBlock input {
+  width: 60%;
   height: 45px;
   padding-left: 10px;
-  border:1px solid #4E4E4E;
+  border: 1px solid #4e4e4e;
 }
-.formBlock button{
-  width:15%;
+.formBlock button {
+  width: 15%;
   height: 47px;
   /* padding:23px; */
-  border:none;
-  background-color: #4E4E4E;
+  border: none;
+  background-color: #4e4e4e;
 }
 
-
-
-
 @media only screen and (max-width: 600px) {
-
-  .header-tabs{
-    width:75%;
+  .header-tabs {
+    width: 75%;
   }
 
-  .header-tabs p{
+  .header-tabs p {
     font-size: 18px;
-    }
-  
-    .footer{
-      width:100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      height:auto;
-      border-top: 2px solid #000;
-      
-    }
-    
+  }
 
-    .footer-block{
-      width:100%;
-      padding-top: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap:5px;
-      align-items: center;
-    
-    }
-    
-    .footer-block p{
+  .footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    height: auto;
+    border-top: 2px solid #000;
+  }
+
+  .footer-block {
+    width: 100%;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .footer-block p {
     font-size: 14px;
-    color: #6B7280;
-    }
-    
-    .footer-link{
-      width:100%;
-      padding-bottom: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap:8px;
-    }
+    color: #6b7280;
+  }
 
-  .joinBlock p{
+  .footer-link {
+    width: 100%;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .joinBlock p {
     font-size: 20px;
     margin: 0;
     line-height: 30px;
     width: 80%;
-  } 
+  }
 
   .formBlock {
-    width:90%;
-    }
+    width: 90%;
+  }
 }
-
-
-
-
-
-
-
