--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -55,7 +12,7 @@ html {
   margin: 0;
   padding: 0;
   overflow-x: hidden !important;
-  font-family: "Roboto", sans-serif;
+  font-family: "Georgia", sans-serif;
 }
 
 section {
@@ -68,8 +25,10 @@ a:hover {
 
 .app {
   width: 100vw;
+  min-height: 100vh;
   border: 2px solid rgb(255, 255, 255);
-  background: #f1eeee;
+  /* background: #f1eeee; */
+  background-color: #EAC3C3;
 }
 
 .header {
@@ -78,7 +37,9 @@ a:hover {
   justify-content: center;
   align-items: center;
   background-color: #123;
+  /* background-color: #EAC3C3; */
   color: white;
+  color: #000;
   height: 80px;
   position: fixed;
   top: 0;
@@ -91,7 +52,10 @@ a:hover {
   align-items: center;
 }
 
-.header-tabs p {
+.header-tabs .link {
+  color: #fff;
+  /* color: #000; */
+  text-decoration: none;
   font-size: 24px;
 }
 
@@ -129,8 +93,15 @@ a:hover {
   width: 100%;
 }
 
+.zigzag-line {
+  height: 10px; /* Adjust the height to fit your needs */
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><polyline points="0,10 5,0 10,10" fill="none" stroke="%23000000" stroke-width="1"/></svg>');
+  background-size: 6px 10px; /* Adjust the size to change the density of the zigzag */
+  position: relative;
+}
+
 .joinBlock {
-  border-top: 2px solid rgb(10, 10, 11);
+  /* border-top: 2px solid rgb(10, 10, 11); */
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -184,10 +155,10 @@ a:hover {
 
 @media only screen and (max-width: 600px) {
   .header-tabs {
-    width: 75%;
+    width: 98%;
   }
 
-  .header-tabs p {
+  .header-tabs .link {
     font-size: 18px;
   }
 
