--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -145,6 +145,84 @@
     font-size: 30px;
     font-weight: 34px;
   }
+  #about .about-right {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #about .about-container .about-right h2 {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+  }
+  #about .accordion {
+    overflow: hidden;
+  }
+  #about .tab input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+  }
+  #about .tab__content {
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.35s;
+  }
+  #about .tab input:checked ~ .tab__content {
+    max-height: 15rem;
+  }
+
+  #about .tab__label {
+    color: #000000;
+    background: var(--theme);
+    border-bottom: 1px solid;
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: 400;
+    display: block;
+    line-height: 64px;
+    padding: 1rem;
+    position: relative;
+  }
+  #about .tab__label::after {
+    content: "\276F";
+    position: absolute;
+    right: 22px;
+    top: 32px;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    transform: rotate(90deg);
+    transition: all 0.35s;
+  }
+  #about .tab input:checked + .tab__label::after {
+    right: 54px;
+    top: 32px;
+    transform: rotate(270deg);
+  }
+  #about .tab__content p {
+    margin: 0;
+    padding: 1rem;
+    max-width: 578px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+  }
+  #about .accordion--radio {
+    --theme: var(--secondary);
+  }
+
+  #about .tab input:not(:checked) + .tab__label:hover::after {
+    animation: bounce 0.5s infinite;
+  }
+  @keyframes bounce {
+    25% {
+      transform: rotate(90deg) translate(0.25rem);
+    }
+    75% {
+      transform: rotate(90deg) translate(-0.25rem);
+    }
+  }
   #about .skills {
     display: none;
   }
@@ -163,6 +241,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
   }
+
   #about .skills ul {
     display: flex;
     justify-content: space-between;
