--- a/src/pages/hangman/style.css
+++ b/src/pages/hangman/style.css
@@ -5,14 +5,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .hangmanContainer h1 {
- font-size: 40px;
+  font-size: 40px;
 }
 
-.optionContainer{
+.optionContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -20,43 +19,43 @@
   align-items: center;
 }
 
-.heading{
+.heading {
   font-size: 30px;
   font-style: italic;
+  text-align: center;
 }
 
 .solution {
-display: flex;
-gap:10px;
-margin-bottom:20px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
-.reset{
+.reset {
   padding: 15px 30px;
   border-radius: 30px;
-  border:none;
+  border: none;
   font-size: 20px;
   margin-top: 20px;
   background-color: #123;
   color: #fff;
 }
 
-.gameStat{
-  width:100%;
+.gameStat {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin-top: 30px;
-
 }
 
-.genrateButton{
+.genrateButton {
   padding: 15px 20px;
   border-radius: 4px;
-  border:none;
+  border: none;
   background-color: #123;
   color: #fff;
   font-size: 20px;
-  margin:8px 4px;
+  margin: 8px 4px;
 }
